examples/test/testpolicy13776.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13776
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key14: value1
      key18: value2
      key6: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value47
          key21: value15
      podSelector:
        matchLabels:
          key32: value48
